# srtmeetingapp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  Package-Windows.ps1  build-linux  build-macos  package-linux
.github/scripts/utils.zsh/: check_linux  setup_linux
.github/workflows/: build-project.yaml  push.yaml
android/: .gitignore  README.md  crash_log.txt  gradle.properties  local.properties  run.sh  settings.gradle.kts  setup.sh  window_dump.xml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/meeting/srt/: MainActivity.kt
android/app/src/main/java/com/meeting/srt/audio/: AudioLevelEffect.kt
android/app/src/main/java/com/meeting/srt/model/: StreamState.kt
android/app/src/main/java/com/meeting/srt/ui/: AudioBar.kt  LogsDialog.kt  MainScreen.kt  MicIcon.kt  RecordButton.kt  SettingsDialog.kt
android/app/src/main/res/values/: themes.xml
cmake/macos/resources/: create-package.cmake.in
cmake/windows/: installer.iss.in
docs/: android_client_specification.md  design_updates.md  obs_srt_meeting_specification.md
src/: plugin-dock.cpp  plugin-dock.h  plugin-main.cpp  plugin-support.c.in  scene-manager.cpp  scene-manager.h  srt-broker.cpp  srt-broker.h  srt-source.cpp  srt-source.h
src/client/: mainwindow.cpp  mainwindow.h
